Adding copyright info

--- a/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
@@ -5,7 +5,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ marchGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="marchGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="marchGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ marchGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -19,7 +19,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ aprilGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="aprilGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="aprilGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ aprilGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -33,7 +33,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ mayGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="mayGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="mayGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ mayGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -47,7 +47,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ juneGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="juneGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="juneGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ juneGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -61,7 +61,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ julyGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="julyGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="julyGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ julyGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -75,7 +75,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ augustGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="augustGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="augustGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ augustGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -89,7 +89,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ septGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="septGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="septGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ septGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -103,7 +103,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ octGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="octGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="octGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ octGridResponse.LatinName }} </p>
         </mat-card-content>
@@ -117,7 +117,7 @@
         <mat-card-title>
             <p class="BodySubtitle"> {{ novGridResponse.Title }} </p>
         </mat-card-title>
-        <img mat-card-image alt="plantImage" [src]="novGridResponse.Pathname" class="card-img-top">
+        <img mat-card-image alt="Plant_Image" [src]="novGridResponse.Pathname" class="card-img-top">
         <mat-card-content class="plantName">
             <p> {{ novGridResponse.LatinName }} </p>
         </mat-card-content>
