--- a/src/app/pages/wildlife-advice-page/wildlife-advice-dialog/wildlife-advice-dialog.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice-dialog/wildlife-advice-dialog.component.html
@@ -2,17 +2,21 @@
 
 <mat-dialog-content>
     <div>
-        <img mat-card-image alt="plantImage" [src]="data.Pathname" class="img-dialog">
-        <div class="Section">
+        <img alt="Plant_Image" [src]="data.Pathname" class="img-dialog">
+        <div class="MainSection">
             <p><b>Latin name :</b> {{data.LatinName}}</p>
             <p><b>Common name :</b> {{data.CommonName}}</p>
             <p><b>Type :</b> {{data.Habit}}</p>
             <p><b>Height :</b> {{data.Height}}m</p>
             <p><b>Native :</b> {{data.Native}}</p>
         </div>
+        <div>
+            <p class="CopyRightText">&copy; Data by <a href="https://pfaf.org/user/Default.aspx">"Plants For A Future"</a>, licensed under a Creative Commons Attribution 4.0 License.
+                <br>&copy; Image <a href="{{data.Link}}">"{{data.Name}}"</a> by {{data.Username}}, distributed under {{data.Copyright}} license.</p>
+        </div>
     </div>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Close</button>
+    <button mat-button mat-stroked-button color="primary" mat-dialog-close>Close</button>
 </mat-dialog-actions>
