--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,10 @@
     font-size: 25px;
     font-style: italic;
   }
+
+  .CopyRightText{
+    font-size: 12px;
+  }
   
   /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
   @media screen and (max-width: 600px) {
