Program now presents multiple relevant plants

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -6,6 +6,6 @@
     <!-- Subheader and advice grid only appear if 'save' is clicked -->
     <p id="adviceTitle" class="Subheader"></p>
     <p id="adviceText"></p>
-    <app-wildlife-advice id="adviceGridID" class="adviceGrid"></app-wildlife-advice>
+    <app-pollinator-suggestions id="adviceGridID" class="adviceGrid"></app-pollinator-suggestions>
 
 </div>
