Site now showing pollinators and advice boxes

--- a/src/app/pages/wildlife-advice-page/pollinator-suggestions/pollinator-suggestions.component.html
+++ b/src/app/pages/wildlife-advice-page/pollinator-suggestions/pollinator-suggestions.component.html
@@ -1,4 +1,7 @@
-<div class="gridBlock">
+<p class="Subheader">Plants Recommended for Your Garden</p>
+<p>It is helpful to have plants flowering in your garden from spring to autumn. Each plant blooms in the month specified and suits your garden, so you can make your garden a home to pollinators all year.</p>
+
+<div class="CardHolder">
     <div *ngFor="let flower of displayFlowers" class="grid-container">
     <div>
         <!-- Display the first flower from our display array -->
