--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -3,9 +3,10 @@
     <!-- Multiple choice is hidden if 'save' is clicked -->
     <app-wildlife-multiplechoice *ngIf="multichoiceShow"></app-wildlife-multiplechoice>
 
-    <!-- Subheader and advice grid only appear if 'save' is clicked -->
-    <p id="adviceTitle" class="Subheader"></p>
-    <p id="adviceText"></p>
-    <app-pollinator-suggestions id="adviceGridID" class="adviceGrid"></app-pollinator-suggestions>
+    <!-- These only appear if 'save' is clicked -->
+    <app-pollinator-suggestions id="adviceGridID" class="hiddenElem"></app-pollinator-suggestions>
+    <app-wildlife-advice-generic id="genericAdviceID1" class="hiddenElem" [adviceGenericObject]="adviceOne"></app-wildlife-advice-generic>
+    <app-wildlife-advice-generic id="genericAdviceID2" class="hiddenElem" [adviceGenericObject]="adviceTwo"></app-wildlife-advice-generic>
+    <app-wildlife-advice-generic id="genericAdviceID3" class="hiddenElem" [adviceGenericObject]="adviceThree"></app-wildlife-advice-generic>
 
 </div>
