--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,11 @@
     padding-left: 30px;
   }
 
+  .CardHolder{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .BodySubtitle{
     font-family: 'Playfair Display', serif;
     font-size: 25px;
