Site now filtering garden-size appropriate advice

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -6,7 +6,9 @@
     <!-- These only appear if 'save' is clicked -->
     <app-pollinator-suggestions id="adviceGridID" class="hiddenElem"></app-pollinator-suggestions>
     <app-wildlife-advice-generic id="genericAdviceID1" class="hiddenElem" [adviceGenericObject]="adviceOne"></app-wildlife-advice-generic>
+    <app-wildlife-info-generic id="genericInfoID1" class="hiddenElem" [infoGenericObject]="infoOne"></app-wildlife-info-generic>
     <app-wildlife-advice-generic id="genericAdviceID2" class="hiddenElem" [adviceGenericObject]="adviceTwo"></app-wildlife-advice-generic>
-    <app-wildlife-advice-generic id="genericAdviceID3" class="hiddenElem" [adviceGenericObject]="adviceThree"></app-wildlife-advice-generic>
-
+    <app-wildlife-info-generic id="genericInfoID2" class="hiddenElem" [infoGenericObject]="infoTwo"></app-wildlife-info-generic>
+    <!-- <app-wildlife-advice-generic id="genericAdviceID3" class="hiddenElem" [adviceGenericObject]="adviceThree"></app-wildlife-advice-generic> -->
+    <app-wildlife-info-generic id="genericInfoID3" class="hiddenElem" [infoGenericObject]="infoThree"></app-wildlife-info-generic>
 </div>
