--- a/src/app/pages/wildlife-advice-page/wildlife-info-generic/wildlife-info-generic.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-info-generic/wildlife-info-generic.component.html
@@ -1,1 +1,14 @@
+<br>
+<p class="Subheader">{{ infoGenericObject.Header }}</p>
 
+<div class="CardHolder">
+  <mat-card class="card">
+    <mat-card-title-group>
+    <mat-card-subtitle> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
+    <!-- <mat-card-content class="BodyContent">
+      <p>{{ adviceGenericObject.BodyText }}</p>
+    </mat-card-content> -->
+    </mat-card-title-group>
+  </mat-card>
+</div>
+<br>
