No november + no repeat cards + formatting change

--- a/src/app/pages/about-page/about-text/about-text.component.html
+++ b/src/app/pages/about-page/about-text/about-text.component.html
@@ -17,9 +17,7 @@
         <div class="flex-container">
             <div>
               <img class="april-img" src="/assets/About_Img.png" alt="Web Designer Image" width=250>
-            </div>
-            <div>
-              text text text text
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. CrasLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget sollicitudin urna. Cras </p>
             </div>
           </div>
       </mat-tab>
