--- a/src/app/pages/wildlife-advice-page/wildlife-advice-generic/wildlife-advice-generic.component.scss
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice-generic/wildlife-advice-generic.component.scss
@@ -4,10 +4,5 @@
     // object-position: center; 
     height: 200px;
     width: 200px;
+    padding-left: 20px;
 }
-
-// .BodyContent {
-//     display: flex;
-//     justify-content: space-between;
-//     flex-direction: column;
-// }
