--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,10 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  p {
+    font-size: 15px;
+  }
   
   router-outlet {
     padding: 0 16px;
@@ -89,5 +93,5 @@
     height: 100%;
     margin: 0; 
     padding: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    // font-family: Roboto, "Helvetica Neue", sans-serif; 
   }
