--- a/src/app/pages/wildlife-advice-page/wildlife-info-generic/wildlife-info-generic.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-info-generic/wildlife-info-generic.component.html
@@ -1,14 +1,13 @@
 <br>
-<p class="Subheader">{{ infoGenericObject.Header }}</p>
+<!-- <p class="Subheader">{{ infoGenericObject.Header }}</p> -->
 
-<div class="CardHolder">
+<div class="InfoHolder">
   <mat-card class="card">
-    <mat-card-title-group>
-    <mat-card-subtitle> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
+    <p class="Subheader">Advice</p>
+    <mat-card-subtitle> <b> {{ infoGenericObject.Header }} :</b> {{ infoGenericObject.BodyText }} </mat-card-subtitle>
     <!-- <mat-card-content class="BodyContent">
       <p>{{ adviceGenericObject.BodyText }}</p>
     </mat-card-content> -->
-    </mat-card-title-group>
   </mat-card>
 </div>
 <br>
