--- a/src/app/pages/wildlife-advice-page/wildlife-advice-generic/wildlife-advice-generic.component.scss
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice-generic/wildlife-advice-generic.component.scss
@@ -4,5 +4,9 @@
     // object-position: center; 
     height: 200px;
     width: 200px;
-    padding-left: 20px;
+    padding: 20px;
 }
+
+.card {
+    flex-direction: row;
+  }
