--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -71,4 +71,6 @@ $my-radio-theme: mat.define-light-theme((
 @include mat.button-theme($my-tabs-theme);
 @include mat.radio-theme($my-radio-theme);
 @include mat.dialog-theme($my-radio-theme);
+@include mat.input-theme($my-tabs-theme);
+@include mat.form-field-theme($my-tabs-theme);
 
