Working on fetching location data from postcodes

--- a/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.html
@@ -5,7 +5,7 @@
             (change)="onTextChange()"
             placeholder="Ex. SW5 7NL">
       <mat-error *ngIf="postcodeFormControl.hasError('postcode') && !postcodeFormControl.hasError('required')">
-        Please enter a valid email address
+        Please enter a valid postcode
       </mat-error>
       <mat-error *ngIf="postcodeFormControl.hasError('required')">
         Postcode is <strong>required</strong>
