Created a hardiness coordinates api

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,3 +20,11 @@ mat-sidenav-container{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+
+main{
+    height:auto;
+}
+
+router-outlet{
+    height:auto;
+}
