--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,8 @@
   .PageBody{
     padding-top: 30px;
     padding-left: 30px;
+    padding-right: 30px;
+    background-color: rgb(248, 252, 249);
   }
 
   .CardHolder{
