Code now filtering by hardiness

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -3,6 +3,8 @@
     <!-- Multiple choice is hidden if 'save' is clicked -->
     <app-wildlife-multiplechoice *ngIf="multichoiceShow"></app-wildlife-multiplechoice>
 
+    <!-- <button mat-stroked-button color="primary" (click)="getAdvice()">Get Your Advice</button> -->
+
 
     <!-- These only appear if 'save' is clicked -->
     <app-pollinator-suggestions id="adviceGridID" class="hiddenElem"></app-pollinator-suggestions>
