--- a/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-questions/find-postcode/find-postcode.component.html
@@ -2,11 +2,13 @@
     <mat-form-field class="example-full-width" appearance="outline">
       <mat-label>Postcode</mat-label>
       <input type="postcode" matInput [formControl]="postcodeFormControl"
-            (change)="onTextChange()"
-            placeholder="Ex. SW5 7NL">
+            placeholder="Ex. SW57NL">
+            <!-- PREVIOUSLY IN ABOVE TO TRIGGER CHANGE ON CLICKING ENTER (change)="onTextChange()" -->
       <!-- mat-hint is being used as err stand in because mat-error couldn't seem to accept custom errors from TS (for our postcode) and 
       I wanted the error messages to look consistent -->
-      <mat-hint><strong class="errStandin" id="errMessage"></strong></mat-hint>
+      <mat-hint><strong class="errStandin" id="errMessageForm"></strong></mat-hint>
     </mat-form-field>
   </form>
+
+<button mat-stroked-button color="primary" (click)="saveForm()">Save</button>
 
