creating GeoJSON storage object

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -30,7 +30,7 @@
         <div class="card-body">
           <p class="Subheader">Have Your Advice Emailed to You</p>
           <p class="card-text">If you want to have the advice you have saved from this page emailed to you, enter your email and click Send.</p>
-          <button mat-stroked-button color="primary" mat-button >Send Email</button>
+          <button mat-stroked-button (click)="processEmailData()" color="primary" mat-button >Send Email</button>
         </div>
       </div>
     </div>
