Now displaying distant proximity info

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -25,6 +25,8 @@
     <app-wildlife-advice-generic id="genericAdviceID2" class="hiddenElem" [adviceGenericObject]="ourAdvice[2]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
     <app-wildlife-info-generic id="genericInfoID2" class="hiddenElem" [infoGenericObject]="ourInfo[2]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-info-generic>
 
+    <app-near-you-component id="nearYouID" class="hiddenElem"></app-near-you-component>
+
     <div id="emailBoxID" class="hiddenElem">
       <div class="card">
         <div class="card-body">
