responds to 3 distance types- more testing needed

--- a/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
@@ -6,8 +6,8 @@
     <p class="card-text">If you can convince your neighbours to make changes with you, you can create larger habitats for your local wildlife.</p>
   </div>
 </div>
+<br>
 </div>
-
 
 <div class="hiddenElem" id="Inspiration">
 <div class="card">
@@ -40,13 +40,32 @@
     </div>
   </div>
 </div>
+<br>
 </div>
 
-<br>
+<div class="hiddenElem" id="PondDistance">
+  <div class="card">
+    <!-- ************* need to credit this image somehow! -->
+    <img class="leftImage" src="/assets/advice_box_images/pond.jpeg" alt="Pond">
+    <div class="card-body">
+      <p class="Subheader">Someone within your local area has put in a pond! </p>
+      <p class="card-text">It's very helpful for aquatic animals if they can travel from one pond to another. It looks like someone 
+        in your neighbourhood had put in a pond. That means if you do the same thing, you could potentially help out local animals together!</p>
+    </div>
+  </div>
+  <br>
+</div>
 
-<!-- 00px;
-  height:300px;
-  background-image: url( https://images.unsplash.com/photo-1563805042-7684c019e1cb);
-  background-size:cover;
-  background-position:center;
-  border-radius:50%; -->
+<div class="hiddenElem" id="HedgehogDistance">
+  <div class="card">
+    <!-- ************* need to credit this image somehow! -->
+    <img class="leftImage" src="/assets/advice_box_images/Erinaceus_europaeus.jpeg" alt="Hedgehog">
+    <div class="card-body">
+      <p class="Subheader">Someone within your local area has put in a hedgehog hole! </p>
+      <p class="card-text">Hedgehogs often get trapped in gardens because fenced make it impossible for them to roam around. It looks like someone 
+        in your neighbourhood had put in a hedgehog hole. That means if you do the same thing, you could potentially help out your local hedgehogs together!</p>
+    </div>
+  </div>
+  <br>
+</div>
+
