Changes after running inspection on webstorm

--- a/src/app/pages/about-page/about-text/about-text.component.scss
+++ b/src/app/pages/about-page/about-text/about-text.component.scss
@@ -4,8 +4,7 @@
 }
 
 .april-img{
-    padding: 10px;
-    padding-right: 20px;
+    padding: 10px 20px 10px 10px;
     max-width: 90%;
     float: left;
 }
