--- a/src/app/pages/wildlife-advice-page/advice-response/wildlife-advice-dialog/wildlife-advice-dialog.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/wildlife-advice-dialog/wildlife-advice-dialog.component.html
@@ -7,8 +7,9 @@
     <div>
         <p class="CopyRightText">&copy; Image <a href="{{adviceGenericObject.Link}}">"{{adviceGenericObject.Name}}"</a> by {{adviceGenericObject.Username}}, distributed under {{adviceGenericObject.Copyright}} license.</p>
     </div>
+    </div>
 </div>
 
 <mat-dialog-actions align="end">
-    <button mat-stroked-button color="primary" mat-dialog-close><b class="button-text">Close</b></button>
+    <button mat-stroked-button color="primary" mat-dialog-close ><b class="button-text">Close</b></button>
 </mat-dialog-actions>
