--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,8 +77,8 @@
   /* If the screen size is 350px wide or less, reduce padding*/
   @media screen and (max-width: 600px) {
     .CardHolder{
-        padding-left: 0px;
-        padding-right: 0px;
+        padding-left: 0;
+        padding-right: 0;
     }
   }
 
@@ -91,7 +91,6 @@
   }
   
   a:hover {
-    color: light-grey;
     opacity: 0.8;
   }
 
