--- a/src/app/pages/wildlife-advice-page/advice-response/wildlife-advice-dialog/wildlife-advice-dialog.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/wildlife-advice-dialog/wildlife-advice-dialog.component.html
@@ -1,15 +1,16 @@
-<p mat-dialog-title class="Subheader"> {{ adviceGenericObject.Header }}</p>
+<div class="dialog-title">
+    <h1 mat-dialog-title class="Subheader"> {{ adviceGenericObject.Header }}</h1>
+    <button mat-icon-button class="close-button" mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+</div>
 
-<div>
-    <img class="img-dialog" src="{{ adviceGenericObject.Pathname }}" alt="Advice_Image">
+<mat-dialog-content>
+    <img class="dialogImage" src="{{ adviceGenericObject.Pathname }}" alt="Advice_Image">
     <div class="card-body">
       <p class="card-text">{{ adviceGenericObject.BodyText }}</p>
     <div>
         <p class="CopyRightText">&copy; Image <a href="{{adviceGenericObject.Link}}">"{{adviceGenericObject.Name}}"</a> by {{adviceGenericObject.Username}}, distributed under {{adviceGenericObject.Copyright}} license.</p>
     </div>
     </div>
-</div>
-
-<mat-dialog-actions align="end">
-    <button mat-stroked-button color="primary" mat-dialog-close ><b class="button-text">Close</b></button>
-</mat-dialog-actions>
+</mat-dialog-content>
