--- a/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.scss
@@ -35,7 +35,7 @@ div.item img {
 
 .cardElements {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-evenly; 
     flex-wrap: wrap;
 }
 
