--- a/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.scss
+++ b/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.scss
@@ -7,6 +7,8 @@
     float: left;
 }
 
-.button-text{
-    color: white;
+.dialog-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
