Added home page

--- a/src/app/display/layout/layout.component.html
+++ b/src/app/display/layout/layout.component.html
@@ -3,7 +3,8 @@
 <!-- This determines the page width when the page is at its widest -->
 <div  fxLayoutAlign="center center" class="layout-wrapper">
     <div fxFlex="80%" fxFlex.lt-md="100%" class="flex-wrapper">
-        <ng-content></ng-content>
+        <ng-content>
+        </ng-content>
     </div>
 </div>
 
