--- a/src/app/pages/home-page/home/home.component.scss
+++ b/src/app/pages/home-page/home/home.component.scss
@@ -1,1 +1,48 @@
+.title-image{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+    display: block;
+}
 
+button{
+    width: 480px;
+    height: 90px;
+    margin: 10px;
+    background-color: rgb(121, 194, 139); /* Green */
+    border: none;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    color: black;
+}
+
+.buttonHolder{
+    display: inline-grid;
+}
+
+.centraliseButtons{
+    display: flex;
+    justify-content: center;
+}
+
+.home-layout-wrapper{
+    height: 100%;
+}
+
+.home-flex-wrapper{
+    height: 100%;
+}
+
+//We've created a special (very similar) PageBody class for this elem so it can have rounded corners
+.PageBodySpecial{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color: rgb(248, 252, 249);
+    height: auto;
+}
